--- a/mclient/src/index.ejs
+++ b/mclient/src/index.ejs
@@ -3,6 +3,9 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 		<title><%= htmlWebpackPlugin.options.title %></title>
 	</head>
 	<body>
