Server now evaluates and Sends Date when Mensa will open next; Client uses this to instantly fetch; Datepicker implemented; Client got ToDo.txt

--- a/mclient/src/index.ejs
+++ b/mclient/src/index.ejs
@@ -11,7 +11,7 @@
 
 		<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 		<link rel="mask-icon" href="/icons/safari_icon.svg" color="#651fff">
-		<link rel="apple-touch-icon" sizes="180x180" href="/icons/ios/ios180.png">
+		<link rel="apple-touch-icon" href="/icons/ios/ios180.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon16.png">
 
