Windows Support; Action Buttons; ChipsField; Highlights, menuSection, more...
+ Action Buttons: Now have support for textbuttons
+ Action Buttons: One single Button can be updated
+ ChipsField: Now supports Lowercase-Arrays
+ FoodItem: Now has support for highlighted from SingleMensa
+ SingleMensa:
+ Footer: Support for iPhone X
+ Header: Added Flexboxes for small screens and iOS Safari
+ Template: Added iOS-CSS Line for smooth scrolling
+ i18n: Added translations for new menuSection-Format
+ Index.ejs: Added rule so app is not scaleable. Without iOS makes weird things.
+ Settings: reflecting chipsfield update.
+ Setup: reflecting chipsfield update. iPhone X support.
+ SingleMensa: Relfects DatePicker and new menuSection-Format Changes and looks for highlightes words.
+ HtmlWebpackPlugin: Creates Hash in index.html for cache busting.

Server: Implemented menuSection-Format and removed time-bug

~ MensaSelector: Now calls updateStorage() when the order is changed.
~ DatePicker: Distinguishes between String and actual Date update to save reloads

--- a/mclient/src/index.ejs
+++ b/mclient/src/index.ejs
@@ -2,14 +2,14 @@
 <html lang="de">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="white">
-		<meta name="theme-color" content="#fcfcfc">
+		<meta name="theme-color" content="#ffffff">
 		<link rel="manifest" href="/manifest.json">
+		<meta name="application-name" content="M">
 		<meta name="apple-mobile-web-app-title" content="M">
 
-		<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 		<link rel="mask-icon" href="/icons/safari_icon.svg" color="#651fff">
 		<link rel="apple-touch-icon" href="/icons/ios/ios180.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon32.png">
