--- a/mclient/src/index.ejs
+++ b/mclient/src/index.ejs
@@ -36,5 +36,15 @@
 			</noscript>
 		</div>
 	</div>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-48111370-4"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-48111370-4');
+	</script>
+
 	</body>
 </html>
